# hypervlm-core

./: .gitignore  CMakeLists.core_test.cmake  CMakeLists.txt  LICENSE  README.md  build_and_run_all.sh  build_and_test.sh  extract_all_pdfs.sh  fix_includes.sh  fix_predictor_smoke_cmake.sh  patch_run_vm.patch  restore_dna_optimized.sh  run_demo.sh  script.sh  test.cpp  turbo_patch1.patch
ai/: placeholder.hpp
atm_bridge/: build.sh
atm_bridge/include/: ATMBridge.hpp
atm_bridge/src/: ATMBridge.cpp
atm_bridge/test/: integration.cpp
atm_test/: build.sh
atm_test/include/: atm.hpp
atm_test/src/: atm.cpp  bench_math.cpp
atm_v2/: build.sh  test.cpp
atm_v2/include/: atm_v2.hpp  config.hpp  workqueue.hpp
atm_v2/src/: atm_v2.cpp  workqueue.cpp
docs/: REFERENCE.txt
docs/relatorio/: 06-validacao-experimental.md  07-modelo-estados-vm.md  08-arquitetura-core.md  09-metodologia.md  10-checklist-banca.md  11-conclusao.md
engenharia/texto/: nbr6118_base.txt  nbr6118_ie2023.txt  nbr6120.txt
examples/: demo.cpp  hello.hv  simple_model.hm  test_dre.hv
include/hvlm/: AST.hpp  DRE.hpp  DREConfig.hpp  HVNode.hpp  HVNodeGen.hpp  IR.hpp  IRBuilder.hpp  Lexer.hpp  Parser.hpp  QDNode96.hpp  VM.hpp
include/hypervlm/: blockid.hpp  core.hpp  diskcache.hpp  diskshard.hpp  generators.hpp  materialized_tile.hpp  threadpool.hpp  tilecache.hpp
include/qdnode/: qdnode.hpp
scripts/: encode_bpe.py  train_bpe.py
scripts/distill/: 01_generate_prompts.py  02_run_teacher.sh  03_build_student_dataset.py  04_train_student.sh  run_full_distillation.sh
src/hvlm/: CMakeLists.txt  README1.md
src/hvlm/bvh/: LBVH.cpp  LBVH.hpp  LBVH_helpers.hpp  lbvh_builder.cpp  morton3d.hpp
src/hvlm/common/: brdf.hpp  material.hpp  sampling.hpp
src/hvlm/core/: HVNodeGen.cpp  IRBuilder.cpp  Lexer.cpp  Parser.cpp  triangle.hpp  vec3.hpp
src/hvlm/denoise/: denoiser.hpp
src/hvlm/render/: camera.hpp  integrator_path.hpp  material.hpp  ray.hpp  renderer.cpp
src/hvlm/render_engine/: atm_integration.hpp  denoise.hpp  geometry.hpp  integrator.cpp  integrator.hpp  main.cpp  material.hpp  sah_bvh.hpp  util.hpp
src/hvlm/render_prod/: bvh.hpp  denoise.hpp  geometry.hpp  integrator.cpp  integrator.hpp  main.cpp  material.hpp  util.hpp
src/hvlm/render_pt/: bvh.hpp  main.cpp  pathtracer.cpp  pathtracer.hpp  scene_geo.hpp
src/hvlm/runtime/: DRE.cpp  VM.cpp
src/hvlm/util/: morton.hpp
src/hvlm/vm/: diamond_vm.cpp  diamond_vm.hpp
tools/: CMakeLists.txt  benchmark_dre.cpp  dna-inspect.cpp  hvlmc.cpp  hvlmc_core.cpp  run_dre.cpp  run_vlm_with_dre.cpp
